# advent-of-code

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  hyperfine.benchmarks  hyperfine.md  justfile
.devcontainer/: devcontainer.json
2023/rust/: Cargo.toml  README.md  divan.txt  hyperfine.md  justfile
2023/rust/benches/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day17.rs  day18.rs  day19.rs  day21.rs
2023/rust/src/internal/: col_iter.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day17.rs  day18.rs  day19.rs  day21.rs  mod.rs
2023/rust/src/internal/day14/: mod.rs  opt.rs  str_board_load.rs  str_cached.rs  str_cached_multi.rs  str_simple.rs  str_tilt_board.rs  task1.rs  task2.rs  the_real_seber.rs
2025/go/: .mise.toml  day1.go  day10.go  day10_test.go  day1_test.go  day2.go  day2_test.go  day3.go  day3_test.go  day4.go  day4_test.go  day5.go  day5_test.go  day6.go  day6_test.go  day7.go  day7_test.go  day8.go  day8_test.go  day9.go  day9_test.go  go.mod  main.go  rect.go  utils.go
2025/go/inputs/: day10.temp.txt
2025/go/vecn/: vec_n.go
